--- a/package.json
+++ b/package.json
@@ -1,45 +1,51 @@
 {
-  "name": "hexo-renderer-react",
-  "version": "1.1.0",
-  "description": "React+babel renderer plugin for Hexo",
-  "keywords": [
-    "hexo",
-    "react",
-    "jsx",
-    "renderer"
-  ],
-  "main": "index",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vanwagonet/hexo-renderer-react.git"
-  },
-  "author": {
-    "name": "Andy VanWagoner",
-    "email": "andy@vanwago.net"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/vanwagonet/hexo-renderer-react/issues"
-  },
-  "homepage": "https://github.com/vanwagonet/hexo-renderer-react",
-  "dependencies": {
-    "babel-core": "^6.4.5",
-    "eval": "^0.1.0"
-  },
-  "peerDependencies": {
-    "react": ">=0.14",
-    "react-dom": ">=0.14"
-  },
-  "devDependencies": {
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "mocha": "^3.0.0",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "standard": "^8.0.0"
-  },
-  "scripts": {
-    "pre-test": "standard",
-    "test": "mocha 'lib/__tests__/*.js'"
-  }
+    "name": "hexo-renderer-react",
+    "version": "1.1.0",
+    "description": "React+babel renderer plugin for Hexo",
+    "keywords": [
+        "hexo",
+        "react",
+        "jsx",
+        "renderer"
+    ],
+    "main": "index",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/vanwagonet/hexo-renderer-react.git"
+    },
+    "author": {
+        "name": "Andy VanWagoner",
+        "email": "andy@vanwago.net"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/vanwagonet/hexo-renderer-react/issues"
+    },
+    "homepage": "https://github.com/vanwagonet/hexo-renderer-react",
+    "dependencies": {
+        "@babel/register": "^7.13.8",
+        "eval": "^0.1.6"
+    },
+    "peerDependencies": {
+        "react": ">=0.14",
+        "react-dom": ">=0.14"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.13.8",
+        "@babel/preset-env": "^7.13.9",
+        "@babel/preset-react": "^7.12.13",
+        "@types/babel__core": "^7.1.12",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
+        "mocha": "^3.0.0",
+        "react": "^15.0.0",
+        "react-dom": "^17.0.1",
+        "standard": "^8.0.0",
+        "typescript": "^4.2.2"
+    },
+    "scripts": {
+        "build": "tsc",
+        "pre-test": "standard",
+        "test": "mocha 'lib/__tests__/*.js'"
+    }
 }
